--- a/src/scss/components/cards.scss
+++ b/src/scss/components/cards.scss
@@ -1,44 +1,96 @@
-// Cards - QLD Desing System extending Bootsrap 5
+// Queensland Government Desing System: Cards
+// Source: https://getbootstrap.com/docs/5.2/components/card/#variables
+
+// SASS variables:                      /node_modules/bootstrap/scss/_variables.scss
+// CSS variables: var(--variable-name)  /node_modules/bootstrap/scss/components/_card.scss   
+
+// SASS replacements (uncomment as needed)
+// $card-spacer-y:                     $spacer;
+// $card-spacer-x:                     $spacer;
+// $card-title-spacer-y:               $spacer * .5;
+// $card-border-width:                 $border-width;
+// $card-border-color:                 var(--#{$prefix}border-color-translucent);
+// $card-border-radius:                $border-radius;
+// $card-box-shadow:                   null;
+// $card-inner-border-radius:          subtract($card-border-radius, $card-border-width);
+// $card-cap-padding-y:                $card-spacer-y * .5;
+// $card-cap-padding-x:                $card-spacer-x;
+// $card-cap-bg:                       rgba($black, .03);
+// $card-cap-color:                    null;
+// $card-height:                       null;
+// $card-color:                        null;
+// $card-bg:                           $white;
+// $card-img-overlay-padding:          $spacer;
+// $card-group-margin:                 $grid-gutter-width * .5;
+
+
+
 .card {
+    
+    --#{$prefix}card-bg: yellow;
+
+    @media (prefers-color-scheme: dark) {
+        --#{$prefix}card-bg: #000;
+    }
+    
+    --#{$prefix}card-spacer-x: #{$card-spacer-x};
+    --#{$prefix}card-spacer-y: #{$card-spacer-y};
+    --#{$prefix}card-title-spacer-y: #{$card-title-spacer-y};
+    --#{$prefix}card-border-width: #{$card-border-width};
+    --#{$prefix}card-border-color: #{$card-border-color};
+    --#{$prefix}card-border-radius: #{$card-border-radius};
+    --#{$prefix}card-box-shadow: #{$card-box-shadow};
+    --#{$prefix}card-inner-border-radius: #{$card-inner-border-radius};
+    --#{$prefix}card-cap-padding-y: #{$card-cap-padding-y};
+    --#{$prefix}card-cap-padding-x: #{$card-cap-padding-x};
+    --#{$prefix}card-cap-bg: #{$card-cap-bg};
+    --#{$prefix}card-cap-color: #{$card-cap-color};
+    --#{$prefix}card-height: #{$card-height};
+    --#{$prefix}card-color: #{$card-color};
+    // --#{$prefix}card-bg: #{$card-bg};
+    --#{$prefix}card-img-overlay-padding: #{$card-img-overlay-padding};
+    --#{$prefix}card-group-margin: #{$card-group-margin};
 
     --#{$prefix}card-border-color: #{$qld-light-grey};
     --#{$prefix}card-link-color: #{$link-color};
     --#{$prefix}card-footer-border: #{$qld-light-grey};
     --#{$prefix}card-border-radius: 0.75rem;
+
     
+
     //Variants
     &.card-alternative {
         --#{$prefix}card-title-color: #{$headings-color};
         --#{$prefix}card-bg: #{$qld-light-grey};
         --#{$prefix}card-color: #{$body-color};
-        --#{$prefix}card-border-color: #7A7A7A;
-        --#{$prefix}card-footer-border: #7A7A7A;
+        --#{$prefix}card-border-color: #7a7a7a;
+        --#{$prefix}card-footer-border: #7a7a7a;
     }
-    &.card-primary { 
-        --#{$prefix}card-title-color: #FFF;
+    &.card-primary {
+        --#{$prefix}card-title-color: #fff;
         --#{$prefix}card-bg: #{$primary};
-        --#{$prefix}card-color: #FFF;
-        --#{$prefix}card-link-color: #FFF;
-        --#{$prefix}card-border-color: #2573C1;
-        --#{$prefix}card-footer-border: #FFFFFF30; //white at 30%
+        --#{$prefix}card-color: #fff;
+        --#{$prefix}card-link-color: #fff;
+        --#{$prefix}card-border-color: #2573c1;
+        --#{$prefix}card-footer-border: #ffffff30; //white at 30%
     }
     &.card-primary--dark {
-        --#{$prefix}card-title-color: #FFF;
+        --#{$prefix}card-title-color: #fff;
         --#{$prefix}card-bg: #{$primary-dark};
-        --#{$prefix}card-color: #FFF;
-        --#{$prefix}card-link-color: #FFF;
-        --#{$prefix}card-footer-border: #FFFFFF30; //white at 30%
+        --#{$prefix}card-color: #fff;
+        --#{$prefix}card-link-color: #fff;
+        --#{$prefix}card-footer-border: #ffffff30; //white at 30%
     }
 
     .card-title {
         line-height: 2rem;
         font-size: 1.5rem;
         margin-bottom: 0.75rem;
-        
+
         a {
-            color:  var(--#{$prefix}card-link-color);
+            color: var(--#{$prefix}card-link-color);
             text-decoration: none;
-        
+
             &:hover {
                 text-decoration: underline;
                 text-underline-offset: 3px;
@@ -61,7 +113,7 @@
         padding-top: 2.5rem;
 
         &:before {
-            content: '';
+            content: "";
             position: absolute;
             left: var(--#{$prefix}card-spacer-x);
             right: var(--#{$prefix}card-spacer-x);
@@ -70,11 +122,8 @@
             background: var(--#{$prefix}card-footer-border);
         }
     }
-    
+
     small {
         font-size: 0.875rem;
     }
-    
-
-
 }
