--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -5,10 +5,30 @@
 
     --#{$prefix}navbar-color: #{$body-color};
     --#{$prefix}navbar-hover-color: #{$primary};
+    --#{$prefix}navbar-hover-bg: #E8E8E8;
     --#{$prefix}navbar-active-color: #{$primary};
     --#{$prefix}navbar-disabled-color: #{$navbar-light-disabled-color};
     
-    --component-icon-color: var(--qld-dark-green);
+    --#{$prefix}navbar-bg-color: #{$qld-extra-light-grey};
+    --#{$prefix}navbar-border-color: #{$qld-light-green};
+
+    --#{$prefix}icon-color: #{$qld-dark-green};
+
+    //Dark theme
+    @media (prefers-color-scheme: dark) {
+        
+        --#{$prefix}navbar-color: #{$qld-extra-light-grey};
+        --#{$prefix}navbar-hover-color: #{$qld-white};
+        --#{$prefix}navbar-hover-bg: #{$qld-system-darkest};
+        --#{$prefix}navbar-active-color: #{$qld-system-darkest};
+        --#{$prefix}navbar-disabled-color: #{$navbar-light-disabled-color};
+        
+        --#{$prefix}navbar-bg-color: #{$qld-text-grey};
+        --#{$prefix}navbar-border-color: #{$qld-dark-green};
+
+        --#{$prefix}icon-color: #{$qld-golden-yellow};
+    
+    }
 
     // --#{$prefix}navbar-brand-padding-y: #{$navbar-brand-padding-y};
     // --#{$prefix}navbar-brand-margin-end: #{$navbar-brand-margin-end};
@@ -27,10 +47,12 @@
     --#{$prefix}navbar-toggler-transition: #{$navbar-toggler-transition};
 
     --#{$prefix}navbar-border-width: 8px;
-    --#{$prefix}navbar-border-color: #{$qld-light-green};
 
+
+    background-color: var(--#{$prefix}navbar-bg-color);
     border-bottom: var(--#{$prefix}navbar-border-width) solid var(--#{$prefix}navbar-border-color);
     align-items: center;
+
 
     .navbar-nav {
 
@@ -38,8 +60,6 @@
         $navbar-padding-y: 0;
         --#{$prefix}navbar-padding-x: #{if($navbar-padding-x == null, 0, $navbar-padding-x)};
         --#{$prefix}navbar-padding-y: #{$navbar-padding-y};
-        --#{$prefix}icon-color: $qld-dark-green;
-
         
         $navbar-light-toggler-icon-bg: url("data:image/svg+xml,%3Csvg width='12' height='6' viewBox='0 0 12 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.117443 0.160356C-0.0433562 0.320713 -0.0433562 0.587973 0.144242 0.74833L5.7186 5.87973C5.8794 6.04009 6.1206 6.04009 6.2814 5.87973L11.8558 0.74833C12.0434 0.587973 12.0434 0.320713 11.8826 0.160356C11.7218 -0.0267261 11.4538 -0.0267261 11.293 0.13363L5.9866 4.99777L0.707038 0.13363C0.626639 0.0534521 0.51944 0 0.41224 0C0.305041 0 0.197842 0.0534521 0.117443 0.160356Z' fill='#008635'/%3E%3C/svg%3E");
         
@@ -61,7 +81,7 @@
             position: relative;
 
             &:hover {
-                background: #E8E8E8;
+                background: var(--#{$prefix}navbar-hover-bg);
                 color: var(--#{$prefix}navbar-hover-color);
                 text-decoration: underline;
                 text-underline-offset: 2px;
@@ -74,7 +94,7 @@
                     left: 0;
                     right: 0;
                     height: 8px;
-                    background: $primary;
+                    background: transparent;
                 }
             }
 
@@ -89,6 +109,7 @@
             display: block;
             height: 2rem;
             width: 1.5rem;
+            background-color: var(--qld-icon-color);
         }
     }
 
