--- a/src/scss/components/typography.scss
+++ b/src/scss/components/typography.scss
@@ -1,42 +1,33 @@
 //Site defaults
-h1,
-.h1 {
+:root {
+    --heading-line-height: 1.5;
+    --heading-margin-bottom: 1rem;
+  }
+  
+  h1, .h1 {
     line-height: 1.3;
     margin-top: 0;
-}
-
-h2,
-.h2 {
-    line-height: 1.5;
-    margin-bottom: 1rem;
+  }
+  
+  h2, .h2 {
+    line-height: var(--line-height);
+    margin-bottom: var(--margin-bottom);
     &:not(:first-child) {
-        margin-top: 4rem;
+      margin-top: 4rem;
     }
-}
-
-h3,
-.h3 {
-    line-height: 1.5;
-    margin-bottom: 1rem;
+  }
+  
+  h3, .h3 {
+    line-height: var(--line-height);
+    margin-bottom: var(--margin-bottom);
     &:not(:first-child) {
-        margin-top: 3rem;
+      margin-top: 3rem;
     }
-}
-
-h4,
-.h4 {
-    line-height: 1.5;
-    margin-bottom: 1rem;
-}
-
-h5,
-.h5 {
-    line-height: 1.5;
-    margin-bottom: 1rem;
-}
-
-h6,
-.h6 {
-    line-height: 1.5;
-    margin-bottom: 1rem;
-}
+  }
+  
+  h4, .h4,
+  h5, .h5,
+  h6, .h6 {
+    line-height: var(--line-height);
+    margin-bottom: var(--margin-bottom);
+  }
