--- a/src/global/layout/content/main.html
+++ b/src/global/layout/content/main.html
@@ -1,9 +1,15 @@
 <h2 id="section-heading">Section heading (H2)</h2>
 
-<div class="alert alert-success" role="alert">
+{{! <div class="alert alert-success" role="alert">
     <h4 class="alert-heading">Complete</h4>
     Your receipt number is <strong>A-12345</strong>. We have sent a copy to your email address. 
-</div>
+</div> }}
+
+
+
+<!-- Insert Dismissable Alert -->
+
+<!-- Insert Sucess Alert -->
 
 <p>When you buy a new or used vehicle from a motor dealer, generally they will arrange
     registration and compulsory third party (CTP) insurance for you. You will need to provide
@@ -22,8 +28,6 @@
     register a vehicle if an interest has been registered by SPER.
 </p>
 
-
-
 <p>You can't apply for a new registration via Transport and Main Roads online services.</p>
 
 <p>To register a vehicle in Queensland, refer to the registration checklist and take these items
@@ -37,6 +41,7 @@
 <p>You can't have a concession on 2 vehicles at the same timefor some concession types.</p>
 
 {{{components.callout}}}
+
 
 <h2 id="inspection">Pre-registration inspection</h2>
 
@@ -54,14 +59,12 @@
 
 <h3 id="fees-and-charges">Fees and charges</h3>
 
-{{{components.blockquote}}}
-
 <p>Commencing on 01 July 2023, registration fees for vehicle registration are:</p>
 
 {{{components.table}}}
 
 <p>For more information on registration fees, refer to the <a href="#" target="_blank">Registration fees</a> page.</p>
 
-<h2 id="related-services">Related services</h2>
 
+<h2 id="related-services">Related services</h2>
 {{{components.cardblock}}}
