--- a/src/scss/qld-variables.scss
+++ b/src/scss/qld-variables.scss
@@ -32,9 +32,9 @@ $qld-brand-accent         : $qld-golden-yellow;
 
 
 // Uncoment to switch primary palette 
-// $qld-brand-primary-dark   : $cobrand-blue; 
-// $qld-brand-primary        : $cobrand-grey;
-// $qld-brand-primary-light  : $cobrand-maroon;
+// $qld-brand-primary-dark   : $cobrand-grey; 
+// $qld-brand-primary        : $cobrand-maroon;
+// $qld-brand-primary-light  : $cobrand-blue;
 // $qld-brand-secondary-dark : $cobrand-orange;
 // $qld-brand-secondary      : $cobrand-purple;
 // $qld-brand-accent         : $cobrand-yellow;
