Organising files, added component list

--- a/src/global/layout/header/header.html
+++ b/src/global/layout/header/header.html
@@ -247,6 +247,10 @@
                         <a class="nav-link" href="form.html">Example form</a>
                     </li>                    
 
+                    <li class="nav-item">
+                        <a class="nav-link" href="components.html">Components</a>
+                    </li>
+
                 </ul>
             </div>
         </div>
