--- a/src/global/layout/template/landingpage.html
+++ b/src/global/layout/template/landingpage.html
@@ -9,6 +9,9 @@
     <title>{{pageTitle}}</title>
 
     <link rel="stylesheet" href="assets/css/qld.bootstrap.css">
+    <script src="assets/js/bootstrap.min.js"></script>
+
+    
 </head>
 
 <body>
