--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -67,6 +67,7 @@
     .card-title {
         line-height: 2rem;
         font-size: 1.5rem;
+        margin-top: 0;
         margin-bottom: 0.75rem;
 
         a {
