--- a/src/global/layout/content/main.html
+++ b/src/global/layout/content/main.html
@@ -9,7 +9,12 @@
 
 <!-- Insert Dismissable Alert -->
 
-<!-- Insert Sucess Alert -->
+
+<!-- Insert Success Alert -->
+<div class="alert alert-info" role="alert">
+    <h4 class="alert-heading">An error occurred</h4>
+    A simple primary alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
+</div>
 
 <p>When you buy a new or used vehicle from a motor dealer, generally they will arrange
     registration and compulsory third party (CTP) insurance for you. You will need to provide
