--- a/src/global/layout/template/contentpage.html
+++ b/src/global/layout/template/contentpage.html
@@ -8,7 +8,7 @@
 
     <title>{{PageHeading}} | QLD.GOV.AU</title>
     <link rel="stylesheet" href="assets/css/qld.bootstrap.css">
-
+    <script src="assets/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -64,6 +64,8 @@
         {{{footer}}}
 
     </main>
+
+
 
     
 </body>
