--- a/src/global/layout/template/index.html
+++ b/src/global/layout/template/index.html
@@ -6,6 +6,7 @@
     <title>{{pageTitle}}</title>
 
     <link rel="stylesheet" href="assets/css/qld.bootstrap.css">
+    <script src="assets/js/bootstrap.min.js"></script>
 
 </head>
 <body>
