--- a/src/layout/content/main.html
+++ b/src/layout/content/main.html
@@ -1,10 +1,15 @@
-<h2 id="section-heading">Section heading (H2)</h2>
+{{{ components.inpagenav }}}
+
+
+<h2 id="section-heading">Section heading (H2) test</h2>
 
 {{! <div class="alert alert-success" role="alert">
     <h4 class="alert-heading">Complete</h4>
     Your receipt number is <strong>A-12345</strong>. We have sent a copy to your email address. 
 </div> }}
 
+
+{{{ components.callout }}}
 
 
 <!-- Insert Dismissable Alert -->
@@ -25,6 +30,8 @@
     you live in a rural area you can visit a QGAP office, Magistrates Court or local police
     station that provides vehicle registration services—please call to confirm before visiting.
 </p>
+
+{{{components.accordion}}}
 
 <p>If you have not already done so, check that the vehicle is unencumbered by searching on the
     <a href="#" target="_blank">Personal Property Securities Register (PPSR)</a> website. It will show if there is money
