--- a/src/layout/header/header.scss
+++ b/src/layout/header/header.scss
@@ -28,7 +28,7 @@ header {
 		--site-search-border-color: var(--qld-brand-primary-light);
         --site-search-icon-color: #FFF;
 
-        --header-main-bg: var(--qld-brand-primary);
+        --header-main-bg: var(--qld-brand-primary-dark);
 
 	}
 }
