--- a/src/scss/qld-variables.scss
+++ b/src/scss/qld-variables.scss
@@ -23,7 +23,7 @@ $cobrand-orange           : #FD855D;
 
 
 //QGOV Brand Mapping - QLD.GOV.AU
-$qld-brand-primary-dark   : $qld-dark-blue; 
+$qld-brand-primary-dark   : #121212; //$qld-dark-blue; 
 $qld-brand-primary        : $qld-sapphire-blue;
 $qld-brand-primary-light  : $qld-light-blue;
 $qld-brand-secondary-dark : $qld-dark-green;
