--- a/src/main.scss
+++ b/src/main.scss
@@ -19,6 +19,7 @@ $enable-cssgrid: true;
 $color-mode-type: data;
 $enable-dark-mode: true;
 
+
 // 1. Include bootstraps functions and variables first (so they can be referenced by proceeding files)
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
@@ -145,7 +146,7 @@ $enable-dark-mode: true;
 @import "./components/button/button.scss";
 @import "./components/callout/callout.scss";
 @import "./components/card/card.scss";
-@import "./components/carousel/carousel.scss";
+//@import "./components/carousel/carousel.scss";
 @import "./components/forms/forms.scss";
 // @import "./components/header/header.scss";
 // @import "./components/header-search/header-search.scss";
@@ -156,6 +157,9 @@ $enable-dark-mode: true;
 @import "./components/table/table.scss";
 @import "./components/pagination/pagination.scss";
 @import "./components/typography/typography.scss";
+
+// Example (for demo)
+@import "./components/_example/example.scss";
 
 // Common Layout Blocks
 @import "./layout/footer/footer.scss";
