Refactor component naming and build scripts

--- a/src/layout/content/main.html
+++ b/src/layout/content/main.html
@@ -3,12 +3,6 @@
 
 <h2 id="section-heading">Section heading (H2) test</h2>
 
-{{! <div class="alert alert-success" role="alert">
-    <h4 class="alert-heading">Complete</h4>
-    Your receipt number is <strong>A-12345</strong>. We have sent a copy to your email address. 
-</div> }}
-
-
 {{{ components.callout }}}
 
 
@@ -16,10 +10,10 @@
 
 
 <!-- Insert Success Alert -->
-<div class="alert alert-info" role="alert">
-    <h4 class="alert-heading">An error occurred</h4>
-    A simple primary alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
-</div>
+{{{ components.closure }}}
+
+{{{ components.receipt }}}
+
 
 <p>When you buy a new or used vehicle from a motor dealer, generally they will arrange
     registration and compulsory third party (CTP) insurance for you. You will need to provide
