Refactor component naming and build scripts

--- a/src/layout/content/main.html
+++ b/src/layout/content/main.html
@@ -10,10 +10,11 @@
 
 
 <!-- Insert Success Alert -->
-{{{ components.closure }}}
+{{{ components.alerts.closure }}}
 
-{{{ components.receipt }}}
+{{{ components.alerts.receipt }}}
 
+{{{ components.alerts.reminder }}}
 
 <p>When you buy a new or used vehicle from a motor dealer, generally they will arrange
     registration and compulsory third party (CTP) insurance for you. You will need to provide
