--- a/src/layout/template/contentpage.html
+++ b/src/layout/template/contentpage.html
@@ -18,25 +18,7 @@
     <main class="qld-body">
 
         <!-- Banner -->
-        <div class="container-fluid qld-banner">
-            <div class="container">
-
-                {{{breadcrumbs}}}
-
-                <div class="row">
-                    <div class="col-12">
-                        <h1 class="banner-title">{{PageHeading}}</h1>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-12">
-                        <p class="banner-lead">{{PageLead}}</p>
-                    </div>
-                </div>
-            
-            </div>
-        </div>
+        {{{banner}}} 
 
         <!-- Main content -->
         <div class="container qld-content">
