--- a/src/layout/template/index.html
+++ b/src/layout/template/index.html
@@ -14,27 +14,9 @@
     {{{header}}} <!-- Include the 'header' partial here without HTML escaping -->
     
     <main class="qld-body">
-
+        Hi world
         <!-- Banner -->
-        <div class="container-fluid qld-banner">
-            <div class="container">
-
-                {{{breadcrumbs}}}
-
-                <div class="row">
-                    <div class="col-12">
-                        <h1 class="banner-title">{{PageHeading}}</h1>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-12">
-                        <p class="banner-lead">{{PageLead}}</p>
-                    </div>
-                </div>
-            
-            </div>
-        </div>
+        {{{banners}}} <!-- Include the 'banner' partial here without HTML escaping -->
 
         <!-- Main content -->
         <div class="container qld-content">
