--- a/src/main.scss
+++ b/src/main.scss
@@ -146,6 +146,7 @@ $enable-dark-mode: true;
 @import "./components/button/button.scss";
 @import "./components/callout/callout.scss";
 @import "./components/card/card.scss";
+@import "./components/correctincorrect/correctincorrect.scss";
 //@import "./components/carousel/carousel.scss";
 @import "./components/forms/forms.scss";
 // @import "./components/header/header.scss";
