--- a/src/scss/qld-variables.scss
+++ b/src/scss/qld-variables.scss
@@ -48,6 +48,7 @@ $qld-dark-grey         : #595959;
 $qld-dark-grey-muted   : #636363;
 $qld-medium-grey       : #78797E;
 $qld-soft-grey         : #7A7A7A;
+$qld-alt-grey          : #DADADA;
 $qld-grey              : #E0E0E0;
 $qld-light-grey        : #EBEBEB;
 $qld-light-grey-alt    : #E8E8E8;
@@ -100,6 +101,7 @@ $project-colors: (
   "soft-grey"            : $qld-soft-grey,
   "medium-grey"          : $qld-medium-grey,
   "grey"                 : $qld-grey,
+  "alt-grey"             : $qld-alt-grey,
   "light-grey"           : $qld-light-grey,
   "light-grey-alt"       : $qld-light-grey-alt,
   "extra-light-grey"     : $qld-extra-light-grey,
