--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -27,6 +27,7 @@
         height: 100%;
         background-image: var(--banner-image);
         background-size: cover;
+        background-position: center center;
         clip-path: polygon(0% 0%, 100% 0%, 100% 100%, var(--banner-angle) 100%);
     }
 
