--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -1,46 +1,69 @@
-// Variables
 .qld-banner {
-    --banner-angle: 29%; //(angle in degrees)
-    --banner-image: url('../img/sample-header-pic.jpg');
 
-    //Defaults
-    --#{$prefix}banner-bg-color: var(--#{$prefix}light-grey);
-    --#{$prefix}banner-title-color: var(--#{$prefix}headings-color);
-    --#{$prefix}banner-lead-color: var(--#{$prefix}body-color);
+    //Defaults variables
+    --bg-color: var(--qld-light-grey);
+    --title-color: var(--headings-color);
+    --lead-color: var(--body-color);
 
-    // Component
-    background-color: var(--#{$prefix}banner-bg-color);
-    padding: 1rem 0 2rem 0;
-    position: relative;
-    overflow: hidden;
-
-    @include media-breakpoint-up(md) {
-        padding: 2.5rem 0 3rem 0;
+    // Variants (text colour and backgrounds)
+    &.banner-alt {
+        --bg-color: var(--qld-alt-grey);
     }
 
-    &:after {
-        content: "";
-        position: absolute;
-        top: 0;
-        right: 0; 
-        width: 35%;
-        height: 100%;
-        background-image: var(--banner-image);
-        background-size: cover;
-        background-position: center center;
-        clip-path: polygon(0% 0%, 100% 0%, 100% 100%, var(--banner-angle) 100%);
-    }
+    &.banner-dark,
+    &.banner-dark-alt {
+        --title-color: var(--qld-white);
+        --lead-color: var(--qld-white);
 
-    @include media-breakpoint-down(md) {
-        &:after {
-            content: none;
+        .breadcrumb {
+            //Redfine variables already scoped in .breadcrumbs
+            //These new values will only be scoped to breadcrumbs within the .banner-* class
+            --breadcrumb-color: var(--qld-white);
+            --qld-breadcrumb-divider-color: var(--qld-white);
+            --qld-breadcrumb-item-active-color: var(--qld-white); 
+            --qld-link-color-rgb: var(--qld-white);
         }
     }
 
+    &.banner-dark {
+        --bg-color: var(--qld-primary);
+    }
+
+    &.banner-dark-alt {
+        --bg-color: #0C3B71; //Todo, add this colour to variables.scss (?) Was defined in Figma. 
+    }
+
+    //Padding
+    --padding-top: 1rem;
+    --padding-bottom: 2rem;
+
+    @include media-breakpoint-up(md) {
+        --padding-top: 2.5rem;
+        --padding-bottom: 3rem;
+    }
+}
+
+// DARK THEME
+@include color-mode(dark) {
+    .qld-banner {
+        // Inherits from :root dark mode variables, but can be overridden here.
+        --banner-title-color: var(--headings-color);
+        --banner-lead-color: var(--body-color);
+    }
+}
+
+
+//Component
+.qld-banner {
+
+    background-color: var(--bg-color);
+    padding: var(--padding-top) 0 var(--padding-bottom) 0;
+    position: relative;
+
     .banner-title {
         // Line height (52px) / Font-size (40px) = 1.3
-        line-height: 1.3;  
-        color: var(--#{$prefix}banner-title-color);
+        line-height: 1.3;
+        color: var(--title-color);
         margin-bottom: 1.5rem;
         max-width: 90%;
     }
@@ -49,48 +72,38 @@
         font-size: 1.5rem;
         line-height: 2rem;
         max-width: 50rem;
-        color: var(--#{$prefix}banner-lead-color);
+        color: var(--lead-color);
     }
 
     .breadcrumb {
-        color: var(--#{$prefix}banner-breadcrumb-color);
+        color: var(--breadcrumb-color);
     }
 
-    // Banner Variations
-    &.banner-default {
-        --#{$prefix}banner-bg-color: var(--#{$prefix}light-grey);
+    //Image
+    .banner-image {
+        --image-height: calc(100% + var(--padding-top) + var(--padding-bottom));
+        position: absolute;
+        top: calc(var(--padding-top) * -1);
+        right: 0;
+        height: var(--image-height);
+        width: calc(var(--image-height)/1.33);
+        background: url('../img/banner-example-3-to-2.jpg');
+        background-size: cover;
+        background-position: center center;
+
+        //Optional - Add an angled edge to image, with ".banner-image .banner-image--angle" 
+        &--angle {
+            --banner-angle: 29%; //(angle in degrees)
+            clip-path: polygon(0% 0%, 100% 0%, 100% 100%, var(--banner-angle) 100%);
+        }
+
     }
 
-    &.banner-alt {
-        --#{$prefix}banner-bg-color: var(--#{$prefix}alt-grey);
+    //Hide banner image below tablet
+    @include media-breakpoint-down(md) {
+        .banner-image {
+            display: none;
+        }
     }
 
-    &.banner-dark {
-        --#{$prefix}banner-bg-color: var(--#{$prefix}primary);
-        --#{$prefix}banner-title-color: #FFF;
-        --#{$prefix}banner-lead-color: #FFF;
-        
-        //Dark banner require white breadcrumbs. We update the breadcrumb color variable here.
-        --qld-link-color-rgb: 255, 255, 255;
-        --qld-breadcrumb-divider-color: #FFF;
-    }
-
-    &.banner-dark-alt {
-        --#{$prefix}banner-bg-color: #0C3B71; //Todo, add this colour to variables.scss (?) Was defined in Figma. 
-        --#{$prefix}banner-title-color: var(--#{$prefix}white);
-        --#{$prefix}banner-lead-color: var(--#{$prefix}white);
-        --#{$prefix}banner-breadcrumb-color: var(--#{$prefix}white);
-    
-        //Dark banner require white breadcrumbs. We update the breadcrumb color variable here.
-        --qld-link-color-rgb: 255, 255, 255;
-        --qld-breadcrumb-divider-color: #FFF;
-    }
-}
-
-@include color-mode(dark) {
-    .qld-banner {
-        // Inherits from :root dark mode variables, but can be overridden here.
-        --#{$prefix}banner-title-color: var(--#{$prefix}headings-color);
-        --#{$prefix}banner-lead-color: var(--#{$prefix}body-color);
-    }
 }
