--- a/src/components/breadcrumbs/breadcrumbs.scss
+++ b/src/components/breadcrumbs/breadcrumbs.scss
@@ -1,16 +1,7 @@
 //Breadcrumbs: https://getbootstrap.com/docs/5.3/components/breadcrumb/#sass-variables
 
-//Using SASS
-$breadcrumb-font-size:              1rem;
-$breadcrumb-padding-y:              0;
-$breadcrumb-padding-x:              0;
-$breadcrumb-item-padding-x:         .75rem;
-$breadcrumb-bg:                     null;
-$breadcrumb-divider:                quote(">");
-$breadcrumb-divider-flipped:        quote("<");
-$breadcrumb-border-radius:          null;
 
-//or using custom CSS properties scoped to the component 
+//OR using custom CSS properties scoped to the component 
 .breadcrumb {
     --#{$prefix}breadcrumb-divider: ">";
     --#{$prefix}breadcrumb-divider-color: var(--#{$prefix}brand-secondary-dark);
